# rusty

./: Cargo.toml  README.md
main/: Cargo.toml
main/src/: main.rs
pedas/: Cargo.toml
pedas/benches/: list.rs
pedas/src/: lib.rs  sync.rs
pedas/src/sync/: list.rs
